[package]
name = "micro_mini_merkle_tree"
version = "1.0.0"
edition = "2018"
authors = []
homepage = ""
repository = "https://github.com/ZKAmoeba-Micro/micro"
license = "Apache-2.0"
keywords = ["blockchain", "micro"]
categories = ["cryptography"]

[dependencies]
micro_crypto = { path = "../../lib/crypto", version = "1.0" }
micro_basic_types = { path = "../basic_types", version = "1.0" }

rayon = "1.3.0"
once_cell = "1.7"

